force-app/main/default/objects/ScriptConfig__c/ScriptConfig__c.object-meta.xml
<CustomObject>
    <description>Objeto com as Configurações do Script, Grupo, Membro do Grupo e Rota</description>
    <label>Grupo e Rota</label>
    <nameField>
        <displayFormat>G-{00000000}</displayFormat>
        <label>Sequencial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupos e Rotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>