force-app/main/default/objects/ScriptConfig__c/fields/AnswerOption__c.field-meta.xml
<CustomField>
    <fullName>AnswerOption__c</fullName>
    <description>Campo com a descrição da opção de resposta</description>
    <label>Opção (Campo Técnico)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>