force-app/main/default/objects/ScriptConfig__c/fields/ChildScript__c.field-meta.xml
<CustomField>
    <fullName>ChildScript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resposta</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Grupos e Rotas (Resposta)</relationshipLabel>
    <relationshipName>ChildScriptScriptConfigs</relationshipName>
    <type>Lookup</type>
</CustomField>