force-app/main/default/objects/ScriptConfig__c/fields/NextScriptConfig__c.field-meta.xml
<CustomField>
    <fullName>NextScriptConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Próximo grupo que deverá ser exibido</description>
    <label>Próximo Grupo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ScriptConfig__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ScriptConfig__c</referenceTo>
    <relationshipLabel>Grupos e Rotas (Grupo de saída padrão)</relationshipLabel>
    <relationshipName>DefaultRoute</relationshipName>
    <type>Lookup</type>
</CustomField>