force-app/main/default/objects/ScriptConfig__c/fields/NextScriptConfigName__c.field-meta.xml
<CustomField>
    <fullName>NextScriptConfigName__c</fullName>
    <formula>NextScriptConfig__r.ScriptToShow__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Próximo</label>
    <type>Text</type>
</CustomField>