force-app/main/default/objects/ScriptConfig__c/fields/NextScriptTech__c.field-meta.xml
<CustomField>
    <fullName>NextScriptTech__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para auxiliar a edição da Rota, quando informado gera automaticamente o cadastro do Próximo Grupo</description>
    <label>Próximo Script</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Grupos e Rotas (Próximo Script)</relationshipLabel>
    <relationshipName>Grupos_e_Rotas</relationshipName>
    <type>Lookup</type>
</CustomField>