force-app/main/default/objects/ScriptConfig__c/fields/OptionDescription__c.field-meta.xml
<CustomField>
    <fullName>OptionDescription__c</fullName>
    <formula>IF( ISBLANK(ChildScript__c), AnswerOption__c,  ChildScript__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opção</label>
    <type>Text</type>
</CustomField>