force-app/main/default/objects/ScriptConfig__c/fields/ParentScript__c.field-meta.xml
<CustomField>
    <fullName>ParentScript__c</fullName>
    <description>Parent Script</description>
    <label>Fluxo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Script__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fluxo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Grupos</relationshipLabel>
    <relationshipName>Scripts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>