force-app/main/default/objects/ScriptConfig__c/fields/ParentScriptConfig__c.field-meta.xml
<CustomField>
    <fullName>ParentScriptConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo</label>
    <referenceTo>ScriptConfig__c</referenceTo>
    <relationshipLabel>Rotas</relationshipLabel>
    <relationshipName>ScriptConfigGroups</relationshipName>
    <type>Lookup</type>
</CustomField>