force-app/main/default/objects/ScriptConfig__c/fields/ScriptToShow__c.field-meta.xml
<CustomField>
    <fullName>ScriptToShow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Script que será apresentado ao usuário</description>
    <inlineHelpText>Script que será apresentado ao usuário</inlineHelpText>
    <label>Script para exibir</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Grupos e Rotas</relationshipLabel>
    <relationshipName>ScriptToShows</relationshipName>
    <type>Lookup</type>
</CustomField>