force-app/main/default/objects/ScriptConfig__c/recordTypes/Group.recordType-meta.xml
<RecordType>
    <fullName>Group</fullName>
    <active>true</active>
    <label>Grupo</label>
</RecordType>