force-app/main/default/objects/ScriptConfig__c/recordTypes/Route.recordType-meta.xml
<RecordType>
    <fullName>Route</fullName>
    <active>true</active>
    <description>Rota do Grupo</description>
    <label>Rota</label>
</RecordType>